<resources>
    <string name="app_name">Hangman</string>
    <string name="statistics">Statistics</string>
    <string name="word_to_be_guessed">Word to be guessed..</string>
    <string name="hangman_image_content_description">Hangman image</string>
    <string name="flag_of_united_kingdom">Flag of United Kingdom</string>
    <string name="flag_of_norway">Flag of Norway</string>
    <string name="new_game">New Game</string>
    <string name="rules">Rules</string>
    <string name="congratulations">Congratulations!</string>
    <string name="correctWord1p">You have guessed every word. Do you want to play again?</string>
    <string name="gameOver">Game Over</string>
    <string name="youLost">The correct word was</string>
    <string name="tryAgain">Try again?</string>
    <string name="yes">Yes</string>
    <string name="words_guessed">Correct words:</string>
    <string name="words_not_guessed">Number of losses:</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="text_rules_0">RULES</string>
    <string name="text_rules_1">When entering the Game screen, you will see underlines which represents the word you are trying to guess.</string>
    <string name="text_rules_2">Take a guess by clicking on a letter. If the letter exists, it will show up on all possible places in the \'invisible\' word.</string>
    <string name="text_rules_3">Each time you guess a letter, it becomes green if the letter is correct and red if not.</string>
    <string name="text_rules_4">If the letter is wrong, the hangman will increment and you will be one step closer to losing.</string>
    <string name="text_rules_5">The hangman will be incremented in the following order: head, body, arm, arm, leg, leg and dead.</string>
    <string name="wins">Wins</string>
    <string name="losses">Losses</string>
    <string name="statistics_text">Wins represents every correct word guessed.\nLosses represents every wrong word guessed.</string>
    <string name="no">No</string>
    <string name="Hangman">Hangman</string>
    <string name="toast_encouragement_0">Good job!</string>
    <string name="toast_encouragement_1">Awesome!</string>
    <string name="toast_encouragement_2">Well done!</string>
    <string name="toast_encouragement_3">Amazing!</string>
    <string name="toast_encouragement_4">Fabulous!</string>
    <string name="clear_data">Clear Data</string>
    <string name="data_cleared">All data deleted</string>
    <string name="delete_confirmation">Are you sure you want to delete all data?</string>
</resources>
