<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    tools:context="com.example.stiangrim.hangman.Rules">

    <ImageView
        android:id="@+id/image_rules_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rules"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/text_rules_0"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:textColor="@color/colorSecondary"
        android:textSize="40sp"
        android:gravity="center"
        android:textAlignment="center"
        android:typeface="monospace"
        android:text="@string/text_rules_0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_rules_0"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/text_rules_1"
        android:layout_width="358dp"
        android:textColor="@color/colorSecondary"
        android:layout_height="35dp"
        android:text="@string/text_rules_1"
        android:layout_marginTop="98dp"
        app:layout_constraintTop_toBottomOf="@+id/text_rules_0"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_rules_2"
        android:layout_width="358dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_rules_2"
        android:textColor="@color/colorSecondary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rules_1" />

    <TextView
        android:id="@+id/text_rules_3"
        android:layout_width="358dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_rules_3"
        android:textColor="@color/colorSecondary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rules_2" />

    <TextView
        android:id="@+id/text_rules_4"
        android:layout_width="180dp"
        android:textColor="@color/colorSecondary"
        android:layout_height="74dp"
        android:text="@string/text_rules_4"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/text_rules_3"
        android:layout_marginLeft="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.065" />

    <TextView
        android:id="@+id/text_rules_5"
        android:layout_width="172dp"
        android:layout_height="78dp"
        android:textColor="@color/colorSecondary"
        android:text="@string/text_rules_5"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_rules_4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintBottom_toBottomOf="@+id/image_rules_0"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>
