<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.stiangrim.hangman.Home"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/flag_norway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/flag_of_norway"
        android:onClick="setLanguageToNorwegian"
        app:layout_constraintRight_toLeftOf="@+id/flag_united_kingdom"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flag_norway" />

    <ImageView
        android:id="@+id/flag_united_kingdom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/flag_of_united_kingdom"
        android:onClick="setLanguageToEnglish"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flag_united_kingdom" />


    <Button
        android:id="@+id/new_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="145dp"
        android:width="200dp"
        android:height="40dp"
        android:background="@color/colorSecondary"
        android:onClick="goToGameActivity"
        android:text="@string/new_game"
        android:textSize="22sp"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/statistics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="21dp"
        android:width="200dp"
        android:height="40dp"
        android:background="@color/colorSecondary"
        android:onClick="goToStatisticsActivity"
        android:text="@string/statistics"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_game_button" />

    <Button
        android:id="@+id/rules_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:width="200dp"
        android:height="40dp"
        android:background="@color/colorSecondary"
        android:onClick="goToRulesActivity"
        android:text="@string/rules"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistics_button" />

    <ImageView
        android:id="@+id/hangman_home"
        android:layout_width="280dp"
        android:layout_height="565dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.479"
        app:srcCompat="@drawable/hangman_home" />


</android.support.constraint.ConstraintLayout>
